<resources>
    <string name="app_name">SafeSpend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Goals</string>
    <string name="title_notifications">Settings</string>
    <string name="app_logo">App Logo</string>
    <string name="safe_spend">SAFE SPEND</string>
    <string name="personal_budgeting_made_easy">Personal budgeting made easy</string>
    <string name="track_and_manage_your_finances">Track and manage your finances</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_welcome">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="username">Username</string>
    <string name="johndoe123">JohnDoe123</string>
    <string name="password">••••••</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_up_account">SIGN UP</string>
    <string name="account_login">ACCOUNT LOGIN</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="streaks">Streaks</string>
    <string name="days">Days</string>
    <string name="daily_counter">8</string>
    <string name="goals">Goals</string>
    <string name="monthly_goal_number">3</string>
    <string name="bonus_goals_monthly">Bonus Goals (Monthly)</string>
    <string name="account_1">Account 1</string>
    <string name="account1_points">+50</string>
    <string name="account_2">Account 2</string>
    <string name="account2_points">+50</string>
    <string name="goals_achieved">Goals Achieved</string>
    <string name="achieved_goals_points">1/2</string>
    <string name="total_points">Total Points</string>
    <string name="total_points_number">100</string>
    <string name="overall_success">Overall Success</string>
    <string name="tier_level">Tier Level</string>
    <string name="status">Status</string>
    <string name="bronze">Bronze</string>
    <string name="back">Back</string>
    <string name="username_text">JohnDoe123</string>
    <string name="edit_username">Edit Username</string>
    <string name="password_heading">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirmation">Confirmation</string>
    <string name="proceed">Proceed</string>
    <string name="delete">Delete</string>
    <string name="johnd_e">password_text</string>
    <string name="username_heading">Username</string>
    <string name="account">ACCOUNT</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="customisation">CUSTOMISATION</string>

    <string-array name="username_options">
        <item>JohnDoe123</item>
    </string-array>

    <string-array name="password_options">
        <item>Change</item>
    </string-array>

    <string-array name="sign_out_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="delete_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_account">Bank Account</string>
    <string name="balance_0_00">Balance: 0.00</string>
    <string name="activity_log">Activity Log</string>
    <string name="in_0_00">In: 0.00</string>
    <string name="out_0_00">Out: 0.00</string>
    <string name="back1">Back</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="categories">CATEGORIES</string>
    <string name="create_expense">Create Expense</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="account1">Account</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="category">Category</string>
    <string name="recurring">Recurring</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="receipt">Receipt</string>
    <string name="attach_receipt">Attach Receipt</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_income">Create Income</string>
    <string name="amount2">Amount</string>
    <string name="enter_amount2">Enter amount</string>
    <string name="account2">Account</string>
    <string name="description2">Description</string>
    <string name="enter_description2">Enter description</string>
    <string name="category2">Category</string>
    <string name="recurring2">Recurring</string>
    <string name="date2">Date</string>
    <string name="select_date2">Select date</string>
    <string name="cancel2">Cancel</string>
    <string name="create2">Create</string>
    <string name="edit_goal">EDIT GOAL</string>
    <string name="goal_name">Goal Name</string>
    <string name="description3">Description</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="current_progress">Current Progress</string>
    <string name="completed">Completed</string>
    <string name="bonus_goal">Bonus Goal</string>
    <string name="save">Save</string>
    <string name="cancel3">Cancel</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="description1">Description</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="recurring1">Recurring</string>
    <string name="attach_receipt1">Attach Receipt</string>
    <string name="view_receipt">View Receipt</string>
    <string name="save1">Save</string>
    <string name="cancel4">Cancel</string>
    <string name="my_goals">My Goals</string>
    <string name="total_goals_0">Total Goals: 0</string>
    <string name="completed_0">Completed: 0</string>
    <string name="back2">Back</string>
    <string name="add_goal">Add Goal</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="graph_summary">Graph Summary</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="custom">Custom</string>
    <string name="income_r_0_00">Income: R 0.00</string>
    <string name="Dash">-</string>
    <string name="expense_r_0_00">Expense: R 0.00</string>
    <string name="Colon">:</string>
    <string name="net_r_0_00">Net: R 0.00</string>
    <string name="back3">Back</string>
    <string name="transfer_funds">TRANSFER FUNDS</string>
    <string name="amount1">Amount</string>
    <string name="enter_amount1">Enter amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancel5">Cancel</string>
    <string name="transfer">Transfer</string>
    <string name="app_logo1">app_logo</string>
    <string name="safe_spend1">SAFE SPEND</string>
    <string name="personal_budgeting_made_easy1">Personal budgeting made easy</string>
    <string name="track_and_manage_your_finances1">Track and manage your finances</string>
    <string name="sign_in1">Sign In</string>
    <string name="don_t_have_an_account1">Don\'t have an account?</string>
    <string name="card_title">Card Title</string>
    <string name="r_0_00">R 0.00</string>
    <string name="choose_action">Choose Action</string>
    <string name="categories1">Categories</string>
    <string name="transfer_funds1">Transfer Funds</string>
    <string name="account_name">Account Name</string>
    <string name="balance_e_g_1000">Balance (e.g. 1000)</string>
    <string name="colour">Colour</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="delete_catagory">Delete Catagory</string>
    <string name="delete_category">Delete category?</string>
    <string name="cancel6">Cancel</string>
    <string name="delete1">Delete</string>
    <string name="category_name">Category Name</string>
    <string name="change_icon">Change Icon</string>
    <string name="cancel7">Cancel</string>
    <string name="save2">Save</string>
    <string name="close">Close</string>
    <string name="add_category">Add category</string>
    <string name="goals1">GOALS</string>
    <string name="goals_achieved1">Goals Achieved</string>
    <string name="_0">0</string>
    <string name="slash">/</string>
    <string name="_01">0</string>
    <string name="flame">Flame</string>
    <string name="star">Star</string>
    <string name="add_goal1">Add Goal</string>
    <string name="r_9210_00">R 9210.00</string>
    <string name="view_chart">View Chart</string>
    <string name="achievements1">Achievements</string>
    <string name="income1">Income</string>
    <string name="r4000_00">R4000,00</string>
    <string name="expenses">Expenses</string>
    <string name="r1934_00">R1934,00</string>
    <string name="october">October</string>
    <string name="add_actions">Add Actions</string>
    <string name="settings">SETTINGS</string>
    <string name="accounts">Accounts</string>
    <string name="accountsbutton">AccountsButton</string>
    <string name="customise">Customise</string>
    <string name="customisebutton">CustomiseButton</string>
    <string name="faqs">FAQs</string>
    <string name="faqsbutton">FAQsButton</string>
    <string name="goal_name1">Goal Name</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="edit_goal1">Edit Goal</string>
    <string name="_0_100">0 / 100</string>
    <string name="icon">icon</string>
    <string name="category1">Category</string>
    <string name="delete2">Delete</string>
    <string name="delete3">Delete</string>
    <string name="edit_transaction1">Edit Transaction</string>
    <string name="category_icon">category icon</string>
    <string name="salary">Salary</string>
    <string name="_1_200_00">+ 1,200.00</string>
    <string name="_2025_10_01">2025-10-01</string>
    <string name="icon_description">Icon description</string>


</resources>