<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/dark_green">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/light_green"
                app:cardCornerRadius="12dp">

                <TextView
                    android:id="@+id/tvEditGoalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edit_goal"

                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </androidx.cardview.widget.CardView>


        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/etGoalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_name"
            android:background="@color/light_green"
            android:padding="12dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description3"
            android:background="@color/light_green"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_amount"
            android:inputType="number"
            android:background="@color/light_green"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etCurrentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_progress"
            android:inputType="number"
            android:background="@color/light_green"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:id="@+id/cbCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:id="@+id/cbBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus_goal"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/btnSaveGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/accent_green"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel3"
            android:backgroundTint="@color/red"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>