<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardTransaction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llRoot"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="@color/dark_green">

        <!-- Icon -->
        <ImageView
            android:id="@+id/ivCategoryIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/category_icon"
            android:src="@drawable/ic_claims_foreground" />

        <!-- Name and date (vertical) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvTransactionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2025_10_01"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Amount -->
        <TextView
            android:id="@+id/tvTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_200_00"
            android:textSize="16sp"
            android:layout_marginEnd="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/btnEditTransaction"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:src="@android:drawable/ic_dialog_info"
            android:contentDescription="@string/edit_transaction1"/>

        <!-- Delete button -->
        <ImageButton
            android:id="@+id/btnDeleteTransaction"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete3"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@android:drawable/ic_menu_delete"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>