<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_green">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_action"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories1"
        android:backgroundTint="@color/accent_green"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_funds1"
        android:backgroundTint="@color/accent_green"
        android:textColor="@color/black"/>
</LinearLayout>