<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    android:backgroundTint="@color/dark_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:text="@string/category1"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/btnDeleteTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete2"
            android:src="@android:drawable/ic_menu_delete"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>